# libVariant

./: .gitignore  .travis.yml  CHANGES  CMakeLists.txt  INSTALL.md  README.md  TODO.txt  appveyor.yml  clean.bat  copyright.txt  insert_header.bat  libVariant.sln  libVariant_VS2008.sln  libVariant_VS2010.sln
ci/appveyor/: build_library.bat  clean.bat  emulate_appveyor.bat  install_googletest.bat  test_script.bat
ci/travis/: build_library.sh  test_script.sh
cmake/: libvariant-config-version.cmake.in  libvariant-config.cmake.in
docs/: libVariant.xcf
include/libvariant/: Variant.h  libVariantApi.h  variant.h  variant_string.h  variant_types.h
libVariant/: FloatLimits.h  IBaseOperatorStrategy.cpp  IBaseOperatorStrategy.h  OperatorNullStrategy.cpp  OperatorNullStrategy.h  OperatorOverflowStrategy.cpp  OperatorOverflowStrategy.h  OperatorSaturationStrategy.cpp  OperatorSaturationStrategy.h  StringEncoder.h  StringParser.h  TypeCast.h  TypeInfo.h  TypeUnion.h  Variant.cpp  Variant.h  VariantTemplates.h  dllmain.cpp  libVariant.vcproj  libVariant.vcxproj  libVariant.vcxproj.filters  libVariantApi.h  targetver.h
libVariantCodeGenerator/: BaseTypes.cpp  BaseTypes.h  CodeGenerator.cpp  CodeGenerator.h  TestAllBaseTypes.cpp  VariantDefinition.cpp  libVariantCodeGenerator.vcproj  libVariantCodeGenerator.vcxproj  libVariantCodeGenerator.vcxproj.filters  main.cpp
libVariantTests/: TestFloatLimits.cpp  TestFloatLimits.h  TestStringEncoder.cpp  TestStringEncoder.h  TestTypeCastSaturation.cpp  TestTypeCastSaturation.h  TestTypeInfo.cpp  TestTypeInfo.h  TestTypeUnion.cpp  TestTypeUnion.h  TestVariant.cpp  TestVariant.h  TestVariantTemplate.cpp  TestVariantTemplate.h  gtesthelper.cpp  gtesthelper.h  libVariantTests.vcproj  libVariantTests.vcxproj  libVariantTests.vcxproj.filters  main.cpp  targetver.h  variantpolicyfunctions.h
src/code_generator/: BaseTypes.cpp  BaseTypes.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  TestAllBaseTypes.cpp  TestAllBaseTypes.h  VariantDefinition.cpp  VariantDefinition.h  main.cpp  utils.cpp  utils.h
src/libVariant/: CMakeLists.txt  FloatLimits.h  StringEncoder.h  StringParser.h  TypeCast.h  TypeInfo.h  TypeUnion.h  Variant.cpp  VariantTemplates.h  config.h.in  variant_string.cpp  version.h.in
test/libvariant_templates_unittest/: CMakeLists.txt  TestFloatLimits.cpp  TestStringEncoder.h  TestTypeCastSaturation.cpp  TestTypeInfo.cpp  TestTypeUnion.cpp  gtesthelper.h  main.cpp
test/libvariant_unittest/: CMakeLists.txt  TestFloatLimits.cpp  TestFloatLimits.h  TestStringEncoder.cpp  TestStringEncoder.h  TestTypeCastSaturation.cpp  TestTypeCastSaturation.h  TestTypeInfo.cpp  TestTypeInfo.h  TestVariant.cpp  TestVariant.h  TestVariant.testVbScriptIdenticalBehavior.input.txt  TestVariantTemplate.cpp  TestVariantTemplate.h  gtesthelper.cpp  gtesthelper.h  main.cpp
test/stdint_types_test/: CMakeLists.txt  main.cpp
